plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.8'
}


mainClassName = 'info.kofler.MainApp'

group 'org.example'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'org.ejml', name: 'ejml-all', version: '0.38'
    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
}


javafx {
    version = "14.0.1"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}